fix #901 disable pull-right style on small screens

--- a/sirepo/package_data/static/css/sirepo.css
+++ b/sirepo/package_data/static/css/sirepo.css
@@ -17,6 +17,9 @@
       .modal-lg {
         width: 945px;
       }
+      .sr-pull-right-sm {
+        float: right !important;
+      }
     }
     @media(max-width: 480px) {
       div.navbar-brand {
